@@ -29,71 +29,111 @@ is_deeply (
   'Nothing loaded other than DBIx::Class::OptDeps',
 );
 
-my $sqlt_dep = DBIx::Class::Optional::Dependencies->req_list_for ('deploy');
+
+# check the project-local groups for sanity
+lives_ok {
+  DBIx::Class::Optional::Dependencies->req_group_list
+} "The entire optdep list is well formed";
+
 is_deeply (
-  [ keys %$sqlt_dep ],
+  [ keys %{ DBIx::Class::Optional::Dependencies->req_list_for ('deploy') } ],
   [ 'SQL::Translator' ],
   'Correct deploy() dependency list',
 );
 
-# make module loading impossible, regardless of actual libpath contents
+# scope to break require()
 {
+
+# make module loading impossible, regardless of actual libpath contents
   local @INC = (sub { die('Optional Dep Test') } );
 
-  ok (
-    ! DBIx::Class::Optional::Dependencies->req_ok_for ('deploy'),
-    'deploy() deps missing',
+# basic test using the deploy target
+  for ('deploy', ['deploy']) {
+
+    # explicitly blow up cache
+    %DBIx::Class::Optional::Dependencies::req_unavailability_cache = ();
+
+    ok (
+      ! DBIx::Class::Optional::Dependencies->req_ok_for ($_),
+      'deploy() deps missing',
+    );
+
+    like (
+      DBIx::Class::Optional::Dependencies->req_missing_for ($_),
+      qr/
+        (?: \A|\s )
+        " SQL::Translator \~ \>\= [\d\.]+ "
+        \s
+        .*?
+        \Q(see DBIx::Class::Optional::Dependencies documentation for details)\E
+        \z
+      /x,
+      'expected missing string contents',
+    );
+
+    like (
+      DBIx::Class::Optional::Dependencies->req_errorlist_for ($_)->{'SQL::Translator'},
+      qr/Optional Dep Test/,
+      'custom exception found in errorlist',
+    );
+
+    #make it so module appears loaded
+    local $INC{'SQL/Translator.pm'} = 1;
+    local $SQL::Translator::VERSION = 999;
+
+    ok (
+      ! DBIx::Class::Optional::Dependencies->req_ok_for ($_),
+      'deploy() deps missing cached properly from previous run',
+    );
+
+    # blow cache again
+    %DBIx::Class::Optional::Dependencies::req_unavailability_cache = ();
+
+    ok (
+      DBIx::Class::Optional::Dependencies->req_ok_for ($_),
+      'deploy() deps present',
+    );
+
+    is (
+      DBIx::Class::Optional::Dependencies->req_missing_for ($_),
+      '',
+      'expected null missing string',
+    );
+
+    is_deeply (
+      DBIx::Class::Optional::Dependencies->req_errorlist_for ($_),
+      undef,
+      'expected empty errorlist',
+    );
+  }
+
+# test lack of deps for oracle test (envvar deleted higher up)
+  is_deeply(
+    DBIx::Class::Optional::Dependencies->req_list_for('test_rdbms_oracle'),
+    {},
+    'empty optional dependencies list for testing Oracle without ENV var',
   );
 
-  like (
-    DBIx::Class::Optional::Dependencies->req_missing_for ('deploy'),
-    qr/
-      (?: \A|\s )
-      " SQL::Translator \~ \>\= [\d\.]+ "
-      \s
-      .*?
-      \Q(see DBIx::Class::Optional::Dependencies documentation for details)\E
-      \z
-    /x,
-    'expected missing string contents',
+# test combination of different requirements on same module (pg's are relatively stable)
+  is_deeply(
+    DBIx::Class::Optional::Dependencies->req_list_for('rdbms_pg'),
+    { 'DBD::Pg' => '0', },
+    'optional dependencies list for using Postgres matches',
   );
 
-  like (
-    DBIx::Class::Optional::Dependencies->req_errorlist_for ('deploy')->{'SQL::Translator'},
-    qr/Optional Dep Test/,
-    'custom exception found in errorlist',
+  is_deeply (
+    DBIx::Class::Optional::Dependencies->req_list_for([qw( rdbms_pg test_rdbms_pg )]),
+    { 'DBD::Pg' => '2.009002' },
+    'optional dependencies list for testing Postgres matches',
   );
+
+  is(
+    DBIx::Class::Optional::Dependencies->req_missing_for([qw( rdbms_pg test_rdbms_pg )]),
+    '"DBD::Pg~>=2.009002"',
+    'optional dependencies error text for testing Postgres matches',
+  );
+
 }
-
-#make it so module appears loaded
-$INC{'SQL/Translator.pm'} = 1;
-$SQL::Translator::VERSION = 999;
-
-ok (
-  ! DBIx::Class::Optional::Dependencies->req_ok_for ('deploy'),
-  'deploy() deps missing cached properly',
-);
-
-#reset cache
-%DBIx::Class::Optional::Dependencies::req_availability_cache = ();
-
-
-ok (
-  DBIx::Class::Optional::Dependencies->req_ok_for ('deploy'),
-  'deploy() deps present',
-);
-
-is (
-  DBIx::Class::Optional::Dependencies->req_missing_for ('deploy'),
-  '',
-  'expected null missing string',
-);
-
-is_deeply (
-  DBIx::Class::Optional::Dependencies->req_errorlist_for ('deploy'),
-  {},
-  'expected empty errorlist',
-);
 
 # test multiple times to find autovivification bugs
 for (1..2) {
@@ -109,24 +149,8 @@ for (1..2) {
 
   throws_ok {
     DBIx::Class::Optional::Dependencies->req_list_for('invalid_groupname');
-  } qr/Requirement group 'invalid_groupname' does not exist/,
+  } qr/Requirement group 'invalid_groupname' is not defined/,
   "req_list_for with invalid groupname throws exception on run $_";
 }
-
-is_deeply(
-  DBIx::Class::Optional::Dependencies->req_list_for('rdbms_pg'),
-  {
-    'DBD::Pg' => '0',
-  }, 'optional dependencies for deploying to Postgres ok');
-
-is_deeply(
-  DBIx::Class::Optional::Dependencies->req_list_for('test_rdbms_pg'),
-  {
-    'DBD::Pg'        => '2.009002',
-  }, 'optional dependencies for testing Postgres with ENV var ok');
-
-is_deeply(
-  DBIx::Class::Optional::Dependencies->req_list_for('test_rdbms_oracle'),
-  {}, 'optional dependencies for testing Oracle without ENV var ok');
 
 done_testing;
